2007-05-23  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/encoding.test: Uncomment tests 3.5 and 3.6 and mark as knownBug
	so that they show up in the test summary as skipped. Untabify.

	* nsd/progress.c (NsTclProgressObjcmd): Make sure progress monitoring is
	enabled before checking an uninitialised hash table.

2007-05-21  Vlad Seryakov  <seryakov@users.sf.net>

        * nsperm/nsperm.c: Updated to support clear text passwords

2007-05-20  Vlad Seryakov  <seryakov@users.sf.net>

        * include/ns.h:
        * include/nsthread.h:
        * nsd/nsd.h:
        * nsd/auth.c:
        * nsd/queue.c:
        * nsd/callbacks.c:
        * nsd/op.c:
        * nsd/conn.c:
        * nsperm/nsperm.c: Changed the internal format of
        authentication mechanism. Instead of keeping jusr user/passwd
        in the Conn struct, there is Ns_Set *auth which keeps all auth related
        data as name/value pairs. By default for Basic auth 2 entries will
        be put there: User and Password. For Digest method there will be more.
        All references to authUser and authPassword in the code have been replaced with
        Ns_ConnAuthUser and Ns_ConnAuthPasswd.

        Added public function Ns_ConnAuth which returns Ns_Set with all securoty tokens.

        ns_info also got additional argument ns_info auth, return name os the set

        * nsperm/init.tcl: Updated with new command syntax but file format is
        kept the same

        * nslog/nslog.c:
        * nscgi/nscgi.c: Updated not to use authUser directly but use
        Ns_ConnAuthUser function instead

        * nsd/set.c: Added public function Ns_SetPutSz that take additional
        parameter as size of the string to put into set

        * nsthread/memory.c: Added public function ns_strncopy for
        duplicating part of the string only

        * include/ns.h:
        * nsd/tclcmds.c:
        * nsd/auth.c:
        * nsd/conn.c: