@@ -42,17 +42,23 @@ if {[ns_config test listenport]} {
 
 
 
-test http_chunked-1.1 {adp streaming w/chunks to HTTP/1.1 client} -constraints serverListen -body {
+test http_chunked-1.1 {
+    ADP streaming w/chunks to HTTP/1.1 client
+} -constraints serverListen -body {
     nstest_http -http 1.1 -getheaders {Transfer-Encoding Content-Length} -getbody t \
         GET /http_chunked.adp?stream=1
-} -result "200 chunked {} 012345678901234"
+} -result "200 chunked {} {a\n0123456789\n5\n01234\n0\n\n}"
 
-test http_chunked-1.2 {adp with buffered response} -constraints serverListen -body {
+test http_chunked-1.2 {
+    ADP with short buffered response
+} -constraints serverListen -body {
     nstest_http -http 1.1 -getheaders {Transfer-Encoding Content-Length} -getbody t \
         GET /http_chunked.adp?stream=0
-} -result {200 {} 15 012345678901234}
+} -result "200 {} 15 012345678901234"
 
-test http_chunked-1.3 {adp streaming to HTTP/1.0 client} -constraints serverListen -body {
+test http_chunked-1.3 {
+    adp streaming to HTTP/1.0 client
+} -constraints serverListen -body {
     nstest_http -http 1.0 -setheaders {Connection keep-alive} \
         -getheaders {Transfer-Encoding Connection Content-Length} -getbody t \
         GET /http_chunked.adp?stream=1
@@ -60,7 +66,9 @@ test http_chunked-1.3 {adp streaming to HTTP/1.0 client} -constraints serverList
 
 
 
-test http_chunked-2.1 {Tcl streaming w/chunks to HTTP/1.1 client} -constraints serverListen -setup {
+test http_chunked-2.1 {
+    Tcl streaming w/chunks to HTTP/1.1 client
+} -constraints serverListen -setup {
     ns_register_proc GET /tclchunked {
         ns_conn chunked 1 ;# remove this explicit call
         ns_headers 200 text/plain
@@ -72,7 +80,7 @@ test http_chunked-2.1 {Tcl streaming w/chunks to HTTP/1.1 client} -constraints s
         GET /tclchunked
 } -cleanup {
     ns_unregister_proc GET /tclchunked
-} -result "200 chunked {} 012345678901234"
+} -result "200 chunked {} {a\n0123456789\n5\n01234\n0\n\n}"
 
 test http_chunked-2.1.1 {Tcl streaming multiple binary buffers w/chunks to HTTP/1.1 client} \
     -constraints serverListen -setup {
@@ -89,10 +97,11 @@ test http_chunked-2.1.1 {Tcl streaming multiple binary buffers w/chunks to HTTP/
         GET /tclchunked
 } -cleanup {
     ns_unregister_proc GET /tclchunked
-} -result "200 chunked {} 012345678901234"
+} -result "200 chunked {} {a\n0123456789\n5\n01234\n0\n\n}"
 
-test http_chunked-2.1.2 {Tcl streaming multiple binary buffers w/chunks to HTTP/1.1 client} \
-    -constraints serverListen -setup {
+test http_chunked-2.1.2 {
+    Tcl streaming multiple binary buffers w/chunks to HTTP/1.1 client
+} -constraints serverListen -setup {
 
     ns_register_proc GET /tclchunked {
         ns_conn chunked 1
@@ -106,7 +115,7 @@ test http_chunked-2.1.2 {Tcl streaming multiple binary buffers w/chunks to HTTP/
         GET /tclchunked
 } -cleanup {
     ns_unregister_proc GET /tclchunked
-} -result "200 chunked {} 012345678901234"
+} -result "200 chunked {} {a\n0123456789\n5\n01234\n0\n\n}"
 
 test http_chunked-2.2 {Tcl streaming to HTTP/1.0 client} -constraints serverListen -setup {
     ns_register_proc GET /tclchunked {
@@ -121,14 +130,16 @@ test http_chunked-2.2 {Tcl streaming to HTTP/1.0 client} -constraints serverList
     ns_unregister_proc GET /tclchunked
 } -result {200 {} {} 012345678901234}
 
-test http_chunked-2.3 {Tcl response of known size to HTTP/1.1 client} -constraints serverListen -setup {
+test http_chunked-2.3 {
+    Tcl response of known size to HTTP/1.1 client
+} -constraints {serverListen knownBug} -setup {
     ns_register_proc GET /tclchunked {ns_return 200 text/plain 01234}
 } -body {
     nstest_http -http 1.1 -getheaders {Transfer-Encoding Content-Length} -getbody 1 \
         GET /tclchunked
 } -cleanup {
     ns_unregister_proc GET /tclchunked
-} -result {200 chunked {} 01234}
+} -result {200 {} 5 01234}
 
 
 
